fixing cropping bug, when crop button is pressed, wrong coordinates are cropped on image

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ html, body {
 }
 
 .App-intro {
+  padding-top: 2em;
   font-size: large;
 }
 
